package logic;

public enum CardType {
    ATTACK,SKILL,POWER

}
