package logic;

public enum Rarity {
    COMMON,UNCOMMON,RARE
}
